# rigging

./: AGENTS.md  BUILD_INSTRUCTIONS.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  PATCHES_STATUS.md  PHASE2_PROGRESS.md  README.md  SERVO_DEPENDENCY_NOTES.md  apply-patches.sh  regenerate-patches.sh
patches/: 0001-transport-url.patch  0002-unix-connector.patch  0003-transport-types.patch  0004-http-loader.patch  0005-net-lib.patch  0006-net-cargo.patch  0007-shared-net-lib.patch  0008-tor-connector.patch  0009-connector-injection.patch  0010-connector-aws-lc-rs-fix.patch
src/: composed.rs  lib.rs  tcp_connector.rs  tor_connector.rs  transport_url.rs  types.rs  unix_connector.rs
src/embed/: backend.rs  builder.rs  config.rs  events.rs  mod.rs  servo_backend.rs
src/servoshell/: mod.rs  parser.rs  running_app_state.rs  stubs.rs  window.rs
src/servoshell/desktop/: app.rs  event_loop.rs  headed_window.rs  headless_window.rs  keyutils.rs  mod.rs  protocols.rs  tracing.rs
