[package]
name = "rigging"
version = "0.2.0"
edition = "2021"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
description = "Transport layer and stable embedding API for Servo-based applications"
repository = "https://github.com/marctjones/rigging"
keywords = ["servo", "transport", "unix-socket", "browser", "embedding"]
categories = ["network-programming", "web-programming", "gui"]

[features]
# Default: transport layer only, no browser engine
# Applications choose their browser backend explicitly
default = ["unix", "tcp"]
unix = []
tcp = []
tor = []
named-pipe = []
# Enable webview browser using system webview (WebKitGTK on Linux)
# NOTE: This requires system dependencies (javascriptcoregtk-4.1 on Linux)
# NOT RECOMMENDED - Use Servo instead for full control
webview = ["wry", "tao"]
# Enable Servo browser engine (launches pre-built servo binary as subprocess)
# When enabled, BrowserBuilder::run() will launch servo to display web content
# This is the recommended backend for Harbor and Compass
# Note: Requires servo binary to be built and available in PATH or at
#       /home/marc/servo/target/release/servo
servo = []

[dependencies]
# URL parsing
url = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Hyper integration (for transport layer)
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tower-service = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Serialization (for Corsair IPC protocol)
serde = { workspace = true }
bincode = { workspace = true }

# Webview (interim solution using system webview)
wry = { version = "0.53", optional = true }
tao = { version = "0.33", optional = true }

# Servo browser engine runs as subprocess - no library dependency needed
# The servo binary must be pre-built and available

# Platform-specific
[target.'cfg(unix)'.dependencies]
tokio = { workspace = true }

[target.'cfg(windows)'.dependencies]
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
