[package]
name = "rigging"
version = "0.2.0"
edition = "2021"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
description = "Transport layer and stable embedding API for Servo-based applications"
repository = "https://github.com/marctjones/rigging"
keywords = ["servo", "transport", "unix-socket", "browser", "embedding"]
categories = ["network-programming", "web-programming", "gui"]

[features]
# Default: transport layer only, no browser engine
# Applications choose their browser backend explicitly
default = ["unix", "tcp"]
unix = []
tcp = []
tor = []
named-pipe = []
# Enable webview browser using system webview (WebKitGTK on Linux)
# NOTE: This requires system dependencies (javascriptcoregtk-4.1 on Linux)
# NOT RECOMMENDED - Use Servo instead for full control
webview = ["wry", "tao"]
# Enable Servo browser engine (embedded as library)
# When enabled, Rigging embeds Servo directly and provides full control over rendering
# This is the recommended backend for Harbor and Compass
# Note: Requires Servo source at /home/marc/servo (path dependency)
servo = [
    "dep:libservo",
    "dep:net",
    "dep:webdriver_server",
    "dep:winit",
    "dep:surfman",
    "dep:euclid",
    "dep:keyboard-types",
    "dep:raw-window-handle",
    "dep:crossbeam-channel",
    "dep:dpi",
    "dep:ipc-channel",
    "dep:rustls",
    "dep:headers",
    "dep:gilrs",
    "dep:glow",
    "dep:mime_guess",
    "dep:image",
    "dep:egui-winit",
    "dep:accesskit",
]

[dependencies]
# URL parsing
url = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Hyper integration (for transport layer)
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tower-service = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Serialization (for Corsair IPC protocol)
serde = { workspace = true }
bincode = { workspace = true }

# Webview (interim solution using system webview)
wry = { version = "0.53", optional = true }
tao = { version = "0.33", optional = true }

# Servo browser engine - embedded as library (servo feature)
# Uses path dependency to local Servo checkout
# TODO: Make this portable (git dependency or published crates)
libservo = { path = "/home/marc/servo/components/servo", optional = true }
net = { path = "/home/marc/servo/components/net", optional = true }
webdriver_server = { path = "/home/marc/servo/components/webdriver_server", optional = true }

# Servo embedding dependencies (when servo feature enabled)
winit = { version = "0.30", optional = true }
surfman = { version = "0.9", optional = true, features = ["sm-raw-window-handle-06", "sm-x11"] }
euclid = { version = "0.22", optional = true }
keyboard-types = { version = "0.7", optional = true }
raw-window-handle = { version = "0.6", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
dpi = { version = "0.1", optional = true }
ipc-channel = { version = "0.20.2", optional = true }
rustls = { version = "0.23", optional = true, features = ["aws-lc-rs"] }
headers = { version = "0.4", optional = true }
gilrs = { version = "0.11", optional = true }  # Gamepad support
glow = { version = "0.14", optional = true }
mime_guess = { version = "2.0", optional = true }
image = { version = "0.25", optional = true }
egui-winit = { version = "0.33.3", optional = true, default-features = false, features = ["accesskit"] }
accesskit = { version = "0.16", optional = true }

# Platform-specific
[target.'cfg(unix)'.dependencies]
tokio = { workspace = true }

[target.'cfg(windows)'.dependencies]
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
